--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta content="telephone=no" name="format-detection">
 <link href="css/style.css" rel="stylesheet">
 <link href="css/fonts.css" rel="stylesheet">
-<title>Serm Center</title>
+<title>Serm Center-</title>
 <!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 <!--[if lte IE 8]><script src="http://phpbbex.com/oldies/oldies.js" charset="utf-8"></script><![endif]-->
 </head>
